--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ label{
     color: black;
 }
 
-/*.overlay {
+.overlay {
     position: absolute;
     left: 0;
     top: 0;
@@ -143,13 +143,7 @@ label{
     pointer-events: none;
     opacity: 0;
     transition: 0.5s ease;
-  }*/
-/*.book-shelf {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, mninmax(300px, 1fr));
-    gap: 8px;
-    margin-top: 40px;
-  }*/
+  }
 
   .book-shelf{
     display: flex;
@@ -162,27 +156,32 @@ label{
     top: 12%;
     left: 15%;
     margin: 2rem;
+    gap: 25px;
   }
   .book{
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      justify-items: center;
       width: 330px;
       height: 430px;
-      font-size: 1rem;
+      font-size: 0.6rem;
       border-radius: 6px;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       line-height: 1.2;
       padding: 20px;
       gap: 20px;
       background-color: var(--white);
-      margin-left: 10px;
       color: var(--dark-green);
   }
 
   .book h2{
       color:var(--dark-green);
+      font-size: 2rem;
+  }
+  .remove-button{
+      background-color: lightgray;
   }
 
   .read-button,
@@ -195,6 +194,12 @@ label{
       width: 90%;
       height: auto;
       padding: 12px;
+  }
+  .read-button.read{
+      background-color: #AED591;
+  }
+  .read-button.not-read{
+      background-color: #EA4C46;
   }
 
   
